[gd_scene load_steps=3 format=3 uid="uid://db7rckec3oge7"]

[ext_resource type="Script" uid="uid://c5meu4ox38s5s" path="res://Particles/particle_score.gd" id="1_8r0v8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4tpxp"]
size = Vector2(10, 10)

[node name="particle_score" type="CharacterBody2D"]
z_index = -1
script = ExtResource("1_8r0v8")

[node name="particle" type="ColorRect" parent="."]
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
color = Color(1, 1, 0, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="speed_change_timer" type="Timer" parent="."]
wait_time = 0.25

[node name="delete_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_4tpxp")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="speed_change_timer" to="." method="_on_speed_change_timer_timeout"]
[connection signal="timeout" from="delete_timer" to="." method="_on_delete_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
